--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "gsap": "^3.13.0",
-    "sass": "^1.89.2",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
-    "vuetify": "^3.9.1"
+    "vuetify": "^3.9.6"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.0",
     "@vue/tsconfig": "^0.7.0",
+    "gh-pages": "^6.3.0",
+    "sass": "^1.91.0",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
+    "vite-plugin-vuetify": "^2.1.2",
     "vue-tsc": "^2.2.12"
   }
 }
