feat(Carrito): se agrega la funcionalidad de agregar al carrito y asu vez un compoenente co los productos seleccionados

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,12 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
 
+    /* 🔧 Agrega estas dos líneas: */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
